hphp/hack/test/typecheck/super_constraint_9.php.exp
File "super_constraint_9.php", line 12, characters 16-17:
Invalid argument (Typing[4110])
File "super_constraint_9.php", line 10, characters 32-34:
This is an int
File "super_constraint_9.php", line 10, characters 46-50:
It is incompatible with a nonnull value
